💄 (app.scss): scope view-transition styles to desktop (≥992px) to prevent unwanted animations on mobile

--- a/app/assets/stylesheets/app.scss
+++ b/app/assets/stylesheets/app.scss
@@ -17,20 +17,23 @@
   animation-duration: 0.15s;
 }
 
-#header {
-  view-transition-name: header;
-}
+@media (min-width: 992px) {
 
-#sidebar {
-  view-transition-name: sidebar;
-}
+  #header {
+    view-transition-name: header;
+  }
 
-::view-transition-old(header),
-::view-transition-new(header),
-::view-transition-old(sidebar),
-::view-transition-new(sidebar) {
-  animation: none;
-  mix-blend-mode: normal;
+  #sidebar {
+    view-transition-name: sidebar;
+  }
+
+  ::view-transition-old(header),
+  ::view-transition-new(header),
+  ::view-transition-old(sidebar),
+  ::view-transition-new(sidebar) {
+    animation: none;
+    mix-blend-mode: normal;
+  }
 }
 
 .ticket-type-description p {
